--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,8 @@ before_install:
 - wget -qO- $URL | tar xJ -C sfdx --strip-components 1
 - "./sfdx/install"
 - export PATH=./sfdx/$(pwd):$PATH
-- gem install bundler
+- gem uninstall bundler
+- gem install bundler --version '1.7.4'
 - sfdx --version
 - sfdx plugins --core
 - sfdx force:auth:jwt:grant --clientid $CONSUMERKEY --jwtkeyfile assets/server.key
