Add gem install bundler v5 in yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ cache: false
 env:
 - URL=https://developer.salesforce.com/media/salesforce-cli/sfdx-linux-amd64.tar.xz
 before_install:
+- gem install bundler --pre
 - openssl aes-256-cbc -K $encrypted_6b444acf73ee_key -iv $encrypted_6b444acf73ee_iv
   -in assets/server.key.enc -out assets/server.key -d
 - export SFDX_AUTOUPDATE_DISABLE=false
@@ -15,8 +16,6 @@ before_install:
 - wget -qO- $URL | tar xJ -C sfdx --strip-components 1
 - "./sfdx/install"
 - export PATH=./sfdx/$(pwd):$PATH
-- gem uninstall bundler
-- gem install bundler --version '1.7.4'
 - sfdx --version
 - sfdx plugins --core
 - sfdx force:auth:jwt:grant --clientid $CONSUMERKEY --jwtkeyfile assets/server.key
